--- a/themes/WebStack-Hugo/layouts/partials/content_search.html
+++ b/themes/WebStack-Hugo/layouts/partials/content_search.html
@@ -34,7 +34,7 @@
                             value="https://www.google.com/search?q=" data-placeholder="谷歌搜索">
 			    <label for="type-google"><span class="text-muted">谷歌</span></label></li>
 				<li><input hidden="" type="radio" name="type" id="type-dk"
-                                value="https://duckduckgo.com/?q=" data-placeholder="Duckduckgo匿名反追踪搜索"><label
+                                value="https://duckduckgo.com/?q=" data-placeholder="Duckduckgo搜索"><label
                                 for="type-dk"><span class="text-muted">Duck</span></label></li>
                         <li><input hidden="" type="radio" name="type" id="type-anaconda" 
 			    value="https://anaconda.org/search?q=" data-placeholder="Anaconda 软件搜索">
@@ -61,8 +61,8 @@
                         <li><input hidden="" type="radio" name="type" id="type-bing1"
                                 value="https://cn.bing.com/search?q=" data-placeholder="微软 Bing 搜索"><label
                                 for="type-bing1"><span class="text-muted">必应</span></label></li>
-                        <li><input hidden="" type="radio" name="type" id="type-dk"
-                                value="https://duckduckgo.com/?q=" data-placeholder="Duckduckgo匿名反追踪搜索"><label
+                        <li><input hidden="" type="radio" name="type" id="type-dk1"
+                                value="https://duckduckgo.com/?q=" data-placeholder="Duckduckgo 搜索"><label
                                 for="type-dk"><span class="text-muted">Duck</span></label></li>
                     </ul>
                 </div>
@@ -118,10 +118,10 @@
                             <label for="type-qunar"><span class="text-muted">去哪儿</span></label></li>
                     </ul>
                 </div>
-                <div class="search-group group-f ">
+                <div class="search-group group-f">
                     <ul class="search-type">
-                        <li><input hidden="" type="radio" name="type" id="type-zhaopin" value="https://sou.zhaopin.com/jobs/searchresult.ashx?kw=" data-placeholder="智联招聘">
-                            <label for="zhaopin"><span  class="text-muted">智联招聘</span></label></li>
+                        <li><input hidden type="radio" name="type" id="type-zhaopin" value="https://sou.zhaopin.com/jobs/searchresult.ashx?kw=" data-placeholder="智联招聘">
+                            <label for="type-zhaopin"><span class="text-muted">智联招聘</span></label></li>
                         <li><input hidden="" type="radio" name="type" id="type-51job" value="https://search.51job.com/?" data-placeholder="前程无忧">
                             <label for="type-51job"><span class="text-muted">前程无忧</span></label></li>
                         <li><input hidden="" type="radio" name="type" id="type-lagou" value="https://www.lagou.com/jobs/list_" data-placeholder="拉钩网">
